--- a/workspace/MiniERP/WebContent/emissao_pedidos.html
+++ b/workspace/MiniERP/WebContent/emissao_pedidos.html
@@ -66,10 +66,12 @@
                   <th>Núm. Pedido</th>
                   <th>Cliente</th>
                   <th>Valor Total</th>
+                  <th>Data Pedido</th>
                   <tr ng-repeat="listaPedidos in pedidosLista | filter:pesquisaPedidos" ng-click="selecionaPedido(listaPedidos)">
-                    <td>{{listaPedidos.codigoproduto}}</td>
-                    <td>{{listaPedidos.descricaoproduto}}</td>
-                    <td>{{listaPedidos.precoproduto}}</td>
+                    <td>{{listaPedidos.numeropedido}}</td>
+                    <td>{{listaPedidos.clienteModel.razaocliente}}</td>
+                    <td>{{listaPedidos.valortotalpedido}}</td>
+                    <td>{{listaPedidos.datapedido}}</td>
                   </tr>
                 </table>
             </div>
@@ -79,16 +81,17 @@
                   <h6 class="espacamento-secao">Cabeçalho</h6>
                   <div id="cabecalho-pedido" class="divisor-secao form-row">
                     <div class="form-group col-md-6">
-                      <label for="codigoproduto">Cliente:</label>
-                      <input type="text" ng-model="produto.codigoproduto" class="form-control" id="codigoproduto" aria-describedby="codigoprodutoHelp" placeholder="">
+                      <label for="clientepedido">Cliente:</label>
+                      <input type="text" ng-model="pedido.clienteModel" class="form-control" id="clientepedido" aria-describedby="clientepedidoHelp" 
+                             placeholder="" ng-options="clienteModel.razaocliente for clienteModel in clienteLista track by clienteModel.codigocliente">>
                     </div>
                     <div class="form-group col-md-2">
-                      <label for="codigoproduto">Data do pedido:</label>
-                      <input type="date" ng-model="produto.codigoproduto" class="form-control" id="codigoproduto" aria-describedby="codigoprodutoHelp" placeholder="">
+                      <label for="datapedido">Data do pedido:</label>
+                      <input type="date" ng-model="pedido.datapedido" class="form-control" id="datapedido" aria-describedby="datapedidoHelp" placeholder="">
                     </div>
                     <div class="form-group col-md-2">
-                      <label for="codigoproduto">Número do pedido:</label>
-                      <input type="text" ng-model="produto.codigoproduto" class="form-control" id="codigoproduto" aria-describedby="codigoprodutoHelp" placeholder="">
+                      <label for="numeropedido">Número do pedido:</label>
+                      <input type="text" ng-model="pedido.numeropedido" class="form-control" id="numeropedido" aria-describedby="numeropedidoHelp" placeholder="">
                     </div>
                   </div>
 
@@ -98,44 +101,49 @@
                     <div class="form-row">
                       <div class="form-group col-md-2">
                         <label for="codigoproduto">Cód. produto:</label>
-                        <input type="text" ng-model="produto.codigoproduto" class="form-control" id="codigoproduto" aria-describedby="codigoprodutoHelp" placeholder="">
+                        <input type="text" ng-model="pedido.produtoModel.codigoproduto" class="form-control" id="codigoproduto" aria-describedby="codigoprodutoHelp" placeholder="">
                       </div>
                       <div class="form-group col-md-10">
-                          <label for="codigoproduto">Descrição do produto:</label>
-                          <input type="text" ng-model="produto.codigoproduto" class="form-control" id="codigoproduto" aria-describedby="codigoprodutoHelp" placeholder="">
+                          <label for="descricaoproduto">Descrição do produto:</label>
+                          <input type="text" ng-model="pedido.produtoModel.descricaoproduto" class="form-control" id="descricaoproduto" aria-describedby="descricaoprodutoHelp" placeholder="">
                       </div>
                     </div>
                       <div class="form-row">
                           <div class="form-group col-md-2">
-                            <label for="codigoproduto">Qtde.:</label>
-                            <input type="text" ng-model="produto.codigoproduto" class="form-control" id="codigoproduto" aria-describedby="codigoprodutoHelp" placeholder="">
+                            <label for="qtdepedidoproduto">Qtde.:</label>
+                            <input type="text" ng-model="pedido.produtoModel.qtdepedidoproduto" class="form-control" id="qtdepedidoproduto" aria-describedby="qtdepedidoprodutoHelp" placeholder="">
                           </div>
                           <div class="form-group col-md-2">
-                            <label for="codigoproduto">Un medida:</label>
-                            <input type="text" ng-disabled="true" ng-model="produto.codigoproduto" class="form-control" id="codigoproduto" aria-describedby="codigoprodutoHelp" placeholder="">
+                            <label for="unidadepedidoproduto">Un medida:</label>
+                            <input type="text" ng-disabled="true" ng-model="pedido.produtoModel.unidadepedidoproduto" class="form-control" id="unidadepedidoproduto" aria-describedby="unidadepedidoprodutoHelp" placeholder="">
                           </div>
                           <div class="form-group col-md-2">
-                            <label for="codigoproduto">Valor unitário:</label>
-                            <input type="text" ng-model="produto.codigoproduto" class="form-control" id="codigoproduto" aria-describedby="codigoprodutoHelp" placeholder="">
+                            <label for="valorunitariopedidoproduto">Valor unitário:</label>
+                            <input type="text" ng-model="pedido.produtoModel.valorunitariopedidoproduto" class="form-control" id="valorunitariopedidoproduto" aria-describedby="valorunitariopedidoprodutoHelp" placeholder="">
                           </div>
                           <div class="form-group col-md-2">
-                            <label for="codigoproduto">Valor total do item:</label>
-                            <input type="text" ng-disabled="true" ng-model="produto.codigoproduto" class="form-control" id="codigoproduto" aria-describedby="codigoprodutoHelp" placeholder="">
+                            <label for="valortotalpedidoproduto">Valor total do item:</label>
+                            <input type="text" ng-disabled="true" ng-model="pedido.produtoModel.valortotalpedidoproduto" class="form-control" id="valortotalpedidoproduto" aria-describedby="valortotalpedidoprodutoHelp" placeholder="">
                           </div>
                       </div>
                       <!--grade de produtos incluídos-->
                     <div>
                       <table class="table table-striped table-hover">
                         <th>Núm. item</th>
+                        <th>Cód. produto</th>
                         <th>Produto</th>
                         <th>Qtde.</th>
                         <th>Un medida</th>
                         <th>Vl. Unit.</th>
                         <th>Valor Total</th>
                         <tr ng-repeat="listaPedidos in pedidosLista | filter:pesquisaPedidos" ng-click="selecionaPedido(listaPedidos)">
-                          <td>{{listaPedidos.codigoproduto}}</td>
-                          <td>{{listaPedidos.descricaoproduto}}</td>
-                          <td>{{listaPedidos.precoproduto}}</td>
+                          <td>{{listaPedidos.produtoModel.itempedidoproduto}}</td>
+                          <td>{{listaPedidos.produtoModel.codigoproduto}}</td>
+                          <td>{{listaPedidos.produtoModel.descricaoproduto}}</td>
+                          <td>{{listaPedidos.produtoModel.qtdepedidoproduto}}</td>
+                          <td>{{listaPedidos.produtoModel.unidadepedidoproduto}}</td>
+                          <td>{{listaPedidos.produtoModel.valorunitariopedidoproduto}}</td>
+                          <td>{{listaPedidos.produtoModel.valortotalpedidoproduto}}</td>
                         </tr>
                       </table>
                     </div>
@@ -147,20 +155,20 @@
                       <div class="form-row">
                           <div class="form-group col-md-2">
                             <label for="codigoproduto">Total de itens.:</label>
-                            <input type="text" ng-disabled="true" ng-model="produto.codigoproduto" class="form-control" id="codigoproduto" aria-describedby="codigoprodutoHelp" placeholder="">
+                            <input type="text" ng-disabled="true" ng-model="pedido.codigoproduto" class="form-control" id="codigoproduto" aria-describedby="codigoprodutoHelp" placeholder="">
                           </div>
                           <div class="form-group col-md-2">
                             <label for="codigoproduto">Qtde total de itens:</label>
-                            <input type="text" ng-disabled="true" ng-model="produto.codigoproduto" class="form-control" id="codigoproduto" aria-describedby="codigoprodutoHelp" placeholder="">
+                            <input type="text" ng-disabled="true" ng-model="pedido.codigoproduto" class="form-control" id="codigoproduto" aria-describedby="codigoprodutoHelp" placeholder="">
                           </div>
                           <div class="form-group col-md-2">
                             <label for="codigoproduto">Valor total do pedido:</label>
-                            <input type="text" ng-disabled="true" ng-model="produto.codigoproduto" class="form-control" id="codigoproduto" aria-describedby="codigoprodutoHelp" placeholder="">
+                            <input type="text" ng-disabled="true" ng-model="pedido.codigoproduto" class="form-control" id="codigoproduto" aria-describedby="codigoprodutoHelp" placeholder="">
                           </div>
                       </div>
                   </div>
-                    <button type="submit" ng-click="gravarProduto()" ng-disabled="!produto.descricaoproduto" class="btn btn-outline-success btn-gravar">Gravar</button>
-                    <button type="submit" ng-click="excluirProduto()" ng-disabled="!produto.descricaoproduto" class="btn btn-outline-danger btn-excluir">Excluir</button>
+                    <button type="submit" ng-click="gravarProduto()" ng-disabled="!pedido.descricaoproduto" class="btn btn-outline-success btn-gravar">Gravar</button>
+                    <button type="submit" ng-click="excluirProduto()" ng-disabled="!pedido.descricaoproduto" class="btn btn-outline-danger btn-excluir">Excluir</button>
                 </form>
             </div>
             <!--
