--- a/workspace/MiniERP/WebContent/emissao_pedidos.html
+++ b/workspace/MiniERP/WebContent/emissao_pedidos.html
@@ -120,7 +120,7 @@
                     <div class="form-row">
                         <div class="form-group col-md-2">
                           <label for="qtdepedidoproduto">Qtde.:</label>
-                          <input type="text"  ng-model="pedido.produtoModel.qtdepedidoproduto" class="form-control" id="qtdepedidoproduto" aria-describedby="qtdepedidoprodutoHelp" placeholder="" onblur="numeroDecimal(this.id, this.value)>
+                          <input type="text"  ng-model="pedido.produtoModel.qtdepedidoproduto" class="form-control" id="qtdepedidoproduto" aria-describedby="qtdepedidoprodutoHelp" placeholder="" onblur="numeroDecimal(this.id, this.value)">
                         </div>
                         <div class="form-group col-md-2">
                           <label for="unidadepedidoproduto">Un medida:</label>
@@ -128,16 +128,16 @@
                         </div>
                         <div class="form-group col-md-2">
                           <label for="valorunitariopedidoproduto">Valor unitário:</label>
-                          <input type="text"  ng-model="pedido.produtoModel.valorunitariopedidoproduto" class="form-control" id="valorunitariopedidoproduto" aria-describedby="valorunitariopedidoprodutoHelp" placeholder="" onblur="numeroDecimal(this.id, this.value)>
+                          <input type="text"  ng-model="pedido.produtoModel.valorunitariopedidoproduto" class="form-control" id="valorunitariopedidoproduto" aria-describedby="valorunitariopedidoprodutoHelp" placeholder="" onblur="numeroDecimal(this.id, this.value)">
                         </div>
                         <div class="form-group col-md-2">
                           <label for="valortotalpedidoproduto">Valor total do item:</label>
-                          <input type="text" ng-disabled="true"  ng-model="pedido.produtoModel.valortotalpedidoproduto" class="form-control" id="valortotalpedidoproduto" aria-describedby="valortotalpedidoprodutoHelp" placeholder="">
+                          <input type="text" ng-disabled ng-model="pedido.produtoModel.valortotalpedidoproduto" class="form-control" id="valortotalpedidoproduto" aria-describedby="valortotalpedidoprodutoHelp" placeholder="">
                         </div>
                     </div>
                     <div class="form-row">
                       <div>
-                          <button type="submit" ng-click="gravarProduto()" ng-disabled="!pedido.produtoModel.descricaoproduto" class="btn btn-outline-success btn-gravar">Incluir produto</button>
+                          <button type="submit" ng-click="incluirProduto()" ng-disabled="!pedido.produtoModel.descricaoproduto" class="btn btn-outline-success btn-gravar">Incluir produto</button>
                       </div>
                     </div>
                       <!--grade de produtos incluídos-->
@@ -162,7 +162,7 @@
                       </table>
                       <div class="form-row">
                         <div>
-                            <button type="submit" ng-click="excluirProduto()" ng-disabled="!pedido.descricaoproduto" class="btn btn-outline-danger btn-excluir">Remover produto</button>
+                            <button type="submit" ng-click="removerProduto()" ng-disabled="!pedido.descricaoproduto" class="btn btn-outline-danger btn-excluir">Remover produto</button>
                         </div>
                       </div>
                       
