--- a/workspace/MiniERP/WebContent/emissao_pedidos.html
+++ b/workspace/MiniERP/WebContent/emissao_pedidos.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" type="text/css" href="css/carousel.css" />
     <link rel="stylesheet" type="text/css" href="css/bootstrap.css" />
     <link rel="stylesheet" type="text/css" href="css/complemento.css" />
-    <link rel="shortcut icon" href="smanager.png">
+    <link rel="shortcut icon" href="imagens/smanager.png">
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.9/angular.min.js"></script>
     <script src="controller/emissao_pedido.js"></script>
     <script src="js/complemento.js"></script>
@@ -33,7 +33,7 @@
     </style>
     <title>SManager Emissão de Pedidos</title>
   </head>
-  <body ng-controller="emissaoPedidosController">
+  <body ng-controller="emissaoPedidoController">
 
     <div class="ng-scope" ng-include="'menus.html'"></div>  	
     
@@ -84,12 +84,11 @@
                     <div class="form-row">
                       <div class="form-group col-md-2">
                           <label for="codigocliente">Cód. cliente:</label>
-                          <input type="text" ng-model="clienteModel.codigocliente" class="form-control" id="codigocliente" aria-describedby="codigoclienteHelp" placeholder="" onblur="numeroInteiro(this.id, this.value)">
+                          <input type="text" ng-model="pedido.clienteModel.codigocliente" class="form-control" id="codigocliente" aria-describedby="codigoclienteHelp" placeholder="" onblur="numeroInteiro(this.id, this.value)">
                       </div>
                       <div class="form-group col-md-10">
                         <label for="clientepedido">Cliente:</label>
-                        <input type="text" ng-model="pedido.clienteModel" class="form-control" id="clientepedido" aria-describedby="clientepedidoHelp" 
-                              placeholder="" ng-options="clienteModel.razaocliente for clienteModel in clienteLista track by clienteModel.codigocliente">
+                        <input type="text" ng-model="pedido.clienteModel.razaocliente" class="form-control" id="clientepedido" aria-describedby="clientepedidoHelp" placeholder="">
                       </div>
                     </div>
                     <div class="form-row">
