--- a/workspace/MiniERP/WebContent/index.html
+++ b/workspace/MiniERP/WebContent/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" type="text/css" href="css/carousel.css" />
     <link rel="stylesheet" type="text/css" href="css/bootstrap.css" />
     <link rel="stylesheet" type="text/css" href="css/complemento.css" />
-    <link rel="shortcut icon" href="smanager.png">
+    <link rel="shortcut icon" href="imagens/smanager.png">
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.9/angular.min.js"></script>
     <script src="controller/clientes-web.js"></script>
     <style>
