finalizando exibição e edição pedido

--- a/workspace/MiniERP/WebContent/clientes.html
+++ b/workspace/MiniERP/WebContent/clientes.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" type="text/css" href="css/carousel.css" />
     <link rel="stylesheet" type="text/css" href="css/bootstrap.css" />
     <link rel="stylesheet" type="text/css" href="css/complemento.css" />
-    <link rel="shortcut icon" href="smanager.png">
+    <link rel="shortcut icon" href="imagens/smanager.png">
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.9/angular.min.js"></script>
     <script src="controller/clientes-web.js"></script>
     <style>
@@ -61,7 +61,7 @@
                   <label for="pesquisa">Busca:</label>
                   <input type="text" class="form-control" ng-model="pesquisaCliente" id="pesquisa" placeholder="Pesquisar registros">
                 </div>
-      
+
                 <table class="table table-striped table-hover">
                   <th>Código</th>
                   <th>Nome/Razão</th>
@@ -73,7 +73,7 @@
                   <th>Telefone 1</th>
                   <th>Telefone 2</th>
                   <th>E-mail</th>
-                  <tr ng-repeat="listaClientes in clientesLista | filter:pesquisaCliente" ng-click="selecionaCliente(listaClientes)" class="linha-foco">
+                  <tr ng-repeat="listaClientes in clientesLista | filter:pesquisaCliente | orderBy: 'codigocliente'" ng-click="selecionaCliente(listaClientes)" class="linha-foco">
                     <td>{{listaClientes.codigocliente}}</td>
                     <td>{{listaClientes.razaocliente}}</td>
                     <td>{{listaClientes.fantasiacliente}}</td>
