--- a/workspace/MiniERP/WebContent/vendedores.html
+++ b/workspace/MiniERP/WebContent/vendedores.html
@@ -9,9 +9,10 @@
     <link rel="stylesheet" type="text/css" href="css/carousel.css" />
     <link rel="stylesheet" type="text/css" href="css/bootstrap.css" />
     <link rel="stylesheet" type="text/css" href="css/complemento.css" />
-    <link rel="shortcut icon" href="smanager.png">
+    <link rel="shortcut icon" href="imagens/smanager.png">
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.9/angular.min.js"></script>
     <script src="controller/vendedores.js"></script>
+    <script src="controller/clientes-web.js"></script>
     <style>
     
       .bd-placeholder-img {
@@ -67,7 +68,7 @@
                   <th>Nome do vendedor</th>
                   <th>E-mail do vendedor</th>
                   <th>Telefone do vendedor</th>
-                  <tr ng-repeat="listaVendedores in vendedoresLista | filter:pesquisaVendedores" ng-click="selecionaVendedor(listaVendedores)">
+                  <tr ng-repeat="listaVendedores in vendedoresLista | filter:pesquisaVendedores | orderBy: 'codigovendedor'" ng-click="selecionaVendedor(listaVendedores)">
                     <td>{{listaVendedores.codigovendedor}}</td>
                     <td>{{listaVendedores.nomevendedor}}</td>
                     <td>{{listaVendedores.emailvendedor}}</td>
